--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,11 @@
 .app {
   width: 100%;
   height: 100%;
+  background-color: rgba(black, 0.9);
+}
+.background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
 }
