--- a/src/components/rightSidebar/style.scss
+++ b/src/components/rightSidebar/style.scss
@@ -32,6 +32,10 @@
     height: 64px;
     cursor: pointer;
     border-radius: 8px;
+    transition: font-size 0.3s;
+    &:hover:not(.--selected) {
+      font-size: 26px;
+    }
     &.--selected {
       background-color: rgba(#494980, 0.6);
     }
