--- a/src/components/topbar/style.scss
+++ b/src/components/topbar/style.scss
@@ -1,14 +1,16 @@
 .topbar {
   width: 100%;
   height: 35%;
-  & .seaerch-area {
+  & .search-area {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
     &__icon {
+      position: relative;
       margin-left: -64px;
+      cursor: pointer;
     }
     & .MuiOutlinedInput-notchedOutline {
       border: none;
@@ -21,22 +23,28 @@
     justify-content: center;
     align-items: center;
     &__login-button {
-      height: 35%;
-      width: 30%;
+      height: 30%;
+      width: 25%;
       border-radius: 32px;
       margin-right: 32px;
       background: linear-gradient(#8685ef, rgba(134, 133, 239, 0.25));
-      font-size: large;
+      font-size: small;
       color: white;
+      border: none;
       cursor: pointer;
+      transition: transform 0.3s;
+      &:hover {
+        transform: scale(1.1);
+      }
     }
 
     &-sign-up-container {
-      height: 35%;
-      width: 30%;
+      height: 30%;
+      width: 25%;
       display: flex;
       justify-content: center;
       align-items: center;
+      transition: transform 0.3s;
       &__button {
         position: relative;
         z-index: 2;
@@ -52,8 +60,55 @@
       }
       & p {
         position: absolute;
-        font-size: large;
+        font-size: small;
         color: white;
+      }
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+  }
+
+  & .user-button {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    &-container {
+      height: 30%;
+      width: 50%;
+      display: flex;
+      align-items: center;
+      transition: transform 0.3s;
+      &__button {
+        position: relative;
+        z-index: 2;
+        height: 100%;
+        width: 100%;
+        background-color: transparent;
+        border-radius: 32px;
+        border: 2px solid transparent;
+        background: linear-gradient(#8685ef, rgba(134, 133, 239, 0.25)) border-box;
+        -webkit-mask: linear-gradient(white 0 0) padding-box, linear-gradient(white 0 0);
+        -webkit-mask-composite: xor;
+        cursor: pointer;
+      }
+      &__img {
+        position: absolute;
+        height: 24px;
+        margin-left: 16px;
+        border-radius: 50%;
+      }
+      & p {
+        position: absolute;
+        font-size: small;
+        color: white;
+        margin-left: 64px;
+      }
+      &:hover {
+        transform: scale(1.05);
       }
     }
   }
