--- a/src/components/content/createAccount/style.scss
+++ b/src/components/content/createAccount/style.scss
@@ -36,7 +36,7 @@
         &-right .textfield-container {
           margin: 24px 0 24px 0;
           display: flex;
-          justify-content: end;
+          justify-content: flex-end;
           & .icon {
             position: absolute;
             right: 32px;
