--- a/src/components/loginPopup/style.scss
+++ b/src/components/loginPopup/style.scss
@@ -2,7 +2,7 @@
   padding: 16px 32px;
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
   & .login-button {
     height: 42px;
     width: 30%;
@@ -21,7 +21,7 @@
   & .textfield-container {
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
   }
   & .icon {
     position: absolute;
