--- a/src/components/topbar/style.scss
+++ b/src/components/topbar/style.scss
@@ -101,6 +101,10 @@
         height: 38px;
         width: 38px;
         border: #8685ef 2px solid;
+        & img {
+          height: 80%;
+          width: 80%;
+        }
       }
       & p {
         position: absolute;
