--- a/src/components/content/home/style.scss
+++ b/src/components/content/home/style.scss
@@ -1,5 +1,6 @@
 .home {
   max-height: 80vh;
+  height: 100%;
   overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: transparent transparent;
@@ -13,14 +14,16 @@
     width: 6px;
   }
   &-popular {
-    width: 90%;
+    width: 91%;
     transform: translateX(0%);
+    margin-bottom: -5%;
     &__title {
       color: white;
       display: flex;
       justify-content: flex-end;
       align-items: center;
       margin-bottom: 16px;
+      margin-right: -4%;
       font-weight: bold;
       font-size: x-large;
       & svg {
@@ -46,7 +49,10 @@
       }
     }
     &-carousel {
-      border-radius: 30px;
+      border-radius: 20px;
+      & .swiper-pagination-bullet-active {
+        background-color: #8685ef !important;
+      }
       & .movie-item {
         display: flex;
         justify-content: center;
@@ -61,6 +67,7 @@
             filter: brightness(20%);
           }
         }
+
         & .movie-title {
           opacity: 0;
           position: absolute;
@@ -76,8 +83,9 @@
     }
   }
   & .movie-category {
-    width: 90%;
-    margin-top: 10%;
+    width: 95%;
+    height: 95%;
+    margin-top: 15%;
     &-title {
       color: white;
       display: flex;
@@ -89,6 +97,93 @@
       & svg {
         margin-left: 8px;
         color: #8685ef;
+      }
+    }
+    &-movies {
+      width: 100%;
+      height: 100%;
+      & .movie-item {
+        height: 350px;
+        width: 50%;
+        float: left;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        transition: transform 0.3s;
+        &:hover {
+          transform: scale(1.01);
+        }
+        &-content {
+          width: 90%;
+          height: 90%;
+          background-color: #141414;
+          border-radius: 20px;
+          &-left-sidebar {
+            float: left;
+            height: 100%;
+            width: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            & img {
+              height: 90%;
+              width: 90%;
+              border-radius: 20px;
+            }
+          }
+          &-right-sidebar {
+            float: left;
+            height: 100%;
+            width: 50%;
+            & .movie-title {
+              color: white;
+              font-weight: bold;
+              font-size: small;
+              margin: 16px 0;
+            }
+            & .movie-description {
+              display: flex;
+              align-items: flex-end;
+              flex-direction: column;
+              padding: 16px;
+              & .row {
+                font-size: small;
+                margin-top: 16px;
+                font-weight: 100;
+                color: grey;
+                display: flex;
+                flex-direction: row;
+                text-align: end;
+                & .value {
+                  color: white;
+                  margin-left: 8px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    & .footer {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      margin: 16px 0;
+      padding: 8px 0;
+      border-radius: 20px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      &:hover {
+        background-color: rgba($color: #000000, $alpha: 0.2);
+      }
+      & .show-more {
+        color: grey;
+      }
+      & svg {
+        color: grey;
+        margin-left: -48px;
+        margin-top: 24px;
       }
     }
   }
