--- a/src/components/content/home/style.scss
+++ b/src/components/content/home/style.scss
@@ -1,5 +1,5 @@
 .home {
-  max-height: 80vh;
+  max-height: 100vh;
   height: 100%;
   overflow-y: auto;
   scrollbar-width: thin;
@@ -17,7 +17,7 @@
     width: 6px;
   }
   &-popular {
-    width: 70%;
+    width: 75%;
     transform: translateX(0%);
     &__title {
       color: white;
@@ -25,7 +25,7 @@
       justify-content: flex-end;
       align-items: center;
       margin-bottom: 16px;
-      margin-right: -15%;
+      margin-right: -10%;
       font-weight: bold;
       font-size: x-large;
       & svg {
@@ -59,26 +59,48 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        cursor: pointer;
         & img {
           width: 100%;
-          height: 50%;
           filter: brightness(70%);
           transition: filter 0.3s;
+          cursor: pointer;
           &:hover {
             filter: brightness(20%);
           }
         }
-
         & .movie-title {
-          opacity: 0;
+          top: 0;
+          left: 64px;
+          background-color: #141414;
+          padding: 12px 24px;
+          border: 1px solid #141414;
+          border-bottom-left-radius: 20px;
+          border-bottom-right-radius: 20px;
           position: absolute;
-          font-size: xx-large;
+          font-size: large;
           font-weight: bolder;
           color: white;
-          transition: opacity 0.3s;
         }
-        &:hover .movie-title {
+        & .button-group {
+          position: absolute;
+          display: grid;
+          grid-row: 1;
+          gap: 32px;
+          z-index: 3;
+          opacity: 0;
+          transition: opacity 0.3s;
+          & svg {
+            color: white;
+            transition: transform 0.3s;
+            &:hover {
+              transform: scale(1.2);
+            }
+          }
+          &:hover + img {
+            filter: brightness(20%);
+          }
+        }
+        &:hover .button-group {
           opacity: 1;
         }
       }
