--- a/src/components/content/listContent/style.scss
+++ b/src/components/content/listContent/style.scss
@@ -2,6 +2,17 @@
   width: 100%;
   height: 100%;
   & .main {
+    overflow-y: auto;
+    max-height: 100vh;
+    &::-webkit-scrollbar-track {
+      background-color: transparent;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: transparent;
+    }
+    &::-webkit-scrollbar {
+      width: 6px;
+    }
     & .category {
       margin: 5%;
       & .title {
@@ -15,6 +26,72 @@
           margin-left: 36px;
           margin-right: 24px;
         }
+      }
+      & .lists {
+        display: grid;
+        gap: 64px;
+        justify-content: flex-end;
+        width: 100%;
+        & .list-item {
+          position: relative;
+          width: 800px;
+          height: 400px;
+          float: right;
+          background-color: rgba(255, 255, 255, 0.5);
+          border-radius: 30px;
+          transition: transform 0.3s;
+          color: white;
+          & .clickable-div {
+            width: 100%;
+            height: 100%;
+            cursor: pointer;
+          }
+          & img {
+            width: 100%;
+            height: 100%;
+            border-radius: 30px;
+            filter: brightness(0.75);
+            cursor: pointer;
+          }
+          &:hover {
+            transform: scale(1.07) translateX(-32px);
+          }
+          & .list-info {
+            position: absolute;
+            display: flex;
+            flex-direction: row;
+            top: 0;
+            left: 48px;
+            & .list-title {
+              padding: 12px 24px;
+              margin-right: 16px;
+              background-color: #141414;
+              border: 1px solid #141414;
+              border-bottom-left-radius: 20px;
+              border-bottom-right-radius: 20px;
+              font-size: large;
+              font-weight: bolder;
+            }
+            & .movie-title {
+              padding: 12px 24px;
+              background-color: #141414;
+              border: 1px solid #141414;
+              border-bottom-left-radius: 20px;
+              border-bottom-right-radius: 20px;
+              font-size: large;
+            }
+          }
+          & .delete-container {
+            position: absolute;
+            right: 24px;
+            top: 12px;
+          }
+        }
+      }
+      & .pagination-container {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
       }
     }
   }
