--- a/src/components/content/specificMovie/style.scss
+++ b/src/components/content/specificMovie/style.scss
@@ -15,6 +15,9 @@
         text-align: end;
         color: white;
         margin-right: 32px;
+        & > div {
+          margin-bottom: 16px;
+        }
         & .title {
           font-size: xx-large;
           font-weight: bold;
@@ -29,7 +32,7 @@
         }
         & .avg-rating {
           justify-content: end;
-          margin-top: 250px;
+          margin-top: 300px;
         }
         & .vote-count {
           width: 72px;
