--- a/src/components/leftSidebar/style.scss
+++ b/src/components/leftSidebar/style.scss
@@ -2,15 +2,15 @@
   height: 100%;
   width: 100%;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   overflow-y: auto;
   max-height: 100%;
-  background-color: black;
-  border-radius: 20px;
-
   & .movie-filters {
     height: 100%;
     width: 100%;
+    background-color: black;
+    border-radius: 20px;
     & .container {
       overflow-y: auto;
       max-height: 80vh;
@@ -47,8 +47,36 @@
     }
   }
   & .list-filters {
-    height: 100%;
+    position: relative;
     width: 100%;
+    background-color: black;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    .MuiPaper-root {
+      border-radius: 20px !important ;
+    }
+    & .title {
+      font-weight: bolder;
+      color: white;
+      margin-left: 16px;
+    }
+    & .genre-item {
+      display: flex;
+      align-items: center;
+      margin: 16px;
+      float: left;
+      border: white 1px solid;
+      padding: 8px;
+      border-radius: 20px;
+    }
+    & .visibility-container {
+      position: absolute;
+      bottom: 100px;
+      left: 36%;
+    }
   }
 }
 
