adding a few tweaks

--- a/src/components/browseMoviesCategory/style.scss
+++ b/src/components/browseMoviesCategory/style.scss
@@ -81,5 +81,10 @@
   & .footer-pagination {
     display: flex;
     justify-content: center;
+    margin-bottom: 80px;
   }
+}
+
+.MuiDialogContent-root {
+  overflow: hidden !important;
 }
