--- a/src/components/content/listContent/style.scss
+++ b/src/components/content/listContent/style.scss
@@ -4,14 +4,19 @@
   & .main {
     overflow-y: auto;
     max-height: 85vh;
+    &::-webkit-scrollbar {
+      width: 8px;
+    }
     &::-webkit-scrollbar-track {
-      background-color: transparent;
+      background: grey;
+      border-radius: 20px;
     }
     &::-webkit-scrollbar-thumb {
-      background-color: transparent;
+      background: white;
+      border-radius: 20px;
     }
-    &::-webkit-scrollbar {
-      width: 6px;
+    &::-webkit-scrollbar-thumb:hover {
+      background: grey;
     }
     & .category {
       margin: 5%;
